# graphql-schema-diff

./: .gitignore  .travis.yml  Dockerfile  Makefile  README.md  USAGE.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: pythonpublish.yml
changes/: __init__.py
diff/: change_types.py  changes.py  compare.py
diff/types/: argument.py  directive.py  enum.py  field.py  input_object_type.py  interface.py  object_type.py  union_type.py
docs/: allow_list.html  formatting.html  index.html  validation.html
docs/changes/: argument.html  directive.html  enum.html  field.html  index.html  input.html  interface.html  object.html  schema.html  type.html  union.html
docs/schemadiff/: schema_loader.html
docs/validation_rules/: index.html
schemadiff/: __init__.py  __main__.py  allow_list.py  changes.py  compare.py  formatting.py  graphql_schema.py  restricted_changes.py  rules.py  schema_loader.py  validation.py
schemadiff/changes/: __init__.py  argument.py  directive.py  enum.py  field.py  input.py  interface.py  object.py  schema.py  type.py  union.py
schemadiff/diff/: argument.py  directive.py  enum.py  field.py  input_object_type.py  interface.py  object_type.py  schema.py  union_type.py
schemadiff/restrictions/: __init__.py
schemadiff/validation_rules/: __init__.py
tests/: test_allow_list.py  test_change_json_repr.py  test_change_severity.py  test_changes_as_json.py  test_cli.py  test_formatting.py  test_restrictions.py  test_schema_diff.py  test_schema_integration.py  test_schema_loading.py  test_validation_rules.py
(+32 files in other folders)
